refactor(tests): update service tests with proper mocking and assertions